--- a/views/index.html
+++ b/views/index.html
@@ -206,7 +206,7 @@ pre {
 
 <section class='container'>
           <hgroup>
-            <h1>Welcome to your Node.js application on OpenShift</h1>
+            <h1>Updated OpenShift App :) </h1>
           </hgroup>
 
 
